tests/invalid_typecheck/test_tc_duplicate_var.aphi
/*
Type-check error: Redefinition of identifier (duplicate variable declaration).
Two variables share the same name 'x'.
*/

int x;
int x;

procedure main {
    x = 1;
}
